# JJCorrFitter

./: .gitignore  CMakeLists.txt  README.md
cmake/: Doxygen.cmake
configuredFiles/: Config.hxx.in
include/: CauchySource1D.hxx  ChiSquaredTest.hxx  CorrelationFunction1D.hxx  CorrelationFunction3D.hxx  CorrelationFunctionImpl.hxx  DoubleGaussian1D.hxx  Fitter.hxx  Fitter1D.hxx  FitterImpl.hxx  Grid.hxx  InteractionTermImpl.hxx  InteractionTermPhaseShift.hxx  InteractionTermSchrodinger.hxx  InteractionTermSquareWell.hxx  InteractionTermTPI.hxx  JJCorrFitterLinkDef.h  LikelihoodImpl.hxx  LogLikelihoodTest.hxx  SourceFunction1D.hxx  SourceFunction3D.hxx  SourceFunctionImpl.hxx  draw1DCF.root
src/: CauchySource1D.cxx  ChiSquaredTest.cxx  CorrelationFunction1D.cxx  CorrelationFunction3D.cxx  DoubleGaussian1D.cxx  Fitter.cxx  Fitter1D.cxx  InteractionTermPhaseShift.cxx  InteractionTermSchrodinger.cxx  InteractionTermSquareWell.cxx  InteractionTermTPI.cxx  LikelihoodImpl.cxx  LogLikelihoodTest.cxx  SourceFunction1D.cxx  SourceFunction3D.cxx  draw1DCF.root  test.cxx
tests/: CMakeLists.txt  draw1DCorrFunc.cxx  fitAll.cxx  testCF.cxx  testCF3D.cxx  testFit.cxx  testFit3D.cxx  testMomRes.cxx  testMomRes3DSMASH.cxx  testMomResSMASH.cxx  testSmashCf.cxx  tests.cxx
